--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
 	   {{ script_chart | safe }}
 	
 	
-<script src="http://cdn.pydata.org/bokeh/release/bokeh-1.4.0.min.js"></script>
+<script src="https://cdn.pydata.org/bokeh/release/bokeh-1.4.0.min.js"></script>
 
 
 
