--- a/templates/ticker.html
+++ b/templates/ticker.html
@@ -3,14 +3,14 @@
 my plot goes here
 
 
- 
+ {{ div_chart | safe }}
  
  
 
    {{ script_chart | safe }}
 	
 	
-<script src="http://cdn.pydata.org/bokeh/release/bokeh-1.2.0.min.js"></script>
+<script src="http://cdn.pydata.org/bokeh/release/bokeh-1.4.0.min.js"></script>
 
 	
 	
